session 340 done, guarantee for producs created, added color picker to product colors, added a field to database table of product_colors after color_name

--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -214,3 +214,12 @@
 .z-index-highest {
 	z-index: 9999;
 }
+
+.product-circle-colors{
+	height: 25px;
+  	width: 25px;
+  	background-color: #bbb;
+ 	border-radius: 50%;
+  	display: inline-block;
+
+}
