session 346 done, added product properties and metas and added comments and answers to the product page

--- a/public/customer-assets/css/style.css
+++ b/public/customer-assets/css/style.css
@@ -32,6 +32,10 @@ body {
 }
 
 
+  /* sweet alert reform */
+  .swal2-html-container {
+    text-align: center;
+}
 
 /*
  -----------------------------------------------------------------------------------------------------------------------
